--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: swiggy-services
+  name: swiggy-servicess
 spec:
   selector:
     app: swiggy
