--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: swiggy-servicess
+  name: swiggy-service
 spec:
   selector:
     app: swiggy
