--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: swiggy
-        image: lutfar1996/swiggy-clone:latest
+        image: lutfar1996/swiggy-clone:v1
         ports:
         - containerPort: 3000   # Use port 3000
 
